--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@ name: HotSpot Billing
 
 description: Admin Hotspot Solution
 
-avatar: https://raw.githubusercontent.com/barryclark/jekyll-now/master/images/jekyll-logo.png
+avatar: https://ionicframework.com/docs/demos/api/avatar/avatar.svg
 
 footer-links:
   dribbble:
